# CPP-University

./: .gitignore  CMakeLists.txt  commit.bat
CLion/: CMakeLists.txt  CTable.h  SmartPointer.h  Tab.h  array.txt  main.cpp  print.h
CLion/googletest-master/: CMakeLists.txt
CLion/matrices/: Matrix.h  MatrixTest.cpp
CLion/matrixes/: Matrix.cpp  Matrix.h  MatrixException.h
CLion/text/: MatrixInteger.txt  MatrixTestInteger  determinant1.txt  determinant2.txt  determinant3.txt  multiply  multiplyVector2.txt
homework/: Main.cpp  example.cpp  homework.cpp  homework.sln  homework.vcxproj  homework.vcxproj.filters
homework/Debug/: PomocMateuszowi.ilk  homework.exe.recipe  homework.ilk  homework.vcxproj.FileListAbsolute.txt  lab1 task4 CTable.ilk  lab2.ilk  lab3.ilk  labStack.ilk  vc142.idb
homework/Debug/homework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+3 more)
homework/lab3/: NodeDynamic.cpp  NodeDynamic.h  NodeStatic.cpp  NodeStatic.h  TreeDynamic.cpp  TreeDynamic.h  TreeStatic.cpp  TreeStatic.h  lab3.cpp  lab3.vcxproj  lab3.vcxproj.filters
homework/lab5/: SmartPointer.cpp  SmartPointer.h  lab5.vcxproj
homework/labStack/: Stack.h  labStack.cpp  labStack.vcxproj  labStack.vcxproj.filters
lab1 task4 CTable/: CTable.cpp  CTable.h  lab1 task4 CTable.aps  lab1 task4 CTable.cpp  lab1 task4 CTable.vcxproj  lab1 task4 CTable.vcxproj.filters  resource.h  test.cpp
lab1 task4 CTable/Debug/: lab1 task4 CTable.exe.recipe  vc142.idb
lab2/: lab2.cpp  lab2.vcxproj
lab2/Debug/: lab2.exe.recipe  vc142.idb
lab3/: lab3.cpp  lab3.vcxproj
lab3/Debug/: vc142.idb
(+39 files in other folders)
